--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "21.1.2"
 
     defaultConfig {
-        applicationId "com.wo2b.samples"
+        applicationId "com.opencdk.samples"
         minSdkVersion 8
         targetSdkVersion 17
     }
