补充提交demo中的使用代码

--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri May 06 23:57:35 CST 2016
+#Sun Sep 25 10:39:38 CST 2016
+ndk.dir=D\:\\dev\\AndroidDev\\sdk\\ndk-bundle
 sdk.dir=D\:\\dev\\AndroidDev\\sdk
